# organicmaps

./: README.md
archive/: CMakeLists.txt  README
archive/android/: AndroidManifest.xml  build.gradle  gradle.properties
archive/oatparser/: CMakeLists.txt
archive/sidechannel_native/: CMakeCache.txt  CMakeLists.txt  CheckFlags.cpp  ReadOffset.cpp  ReadOffset.h  native-lib.cpp
archive/sidechannel_native/dexinfo/: dexinfo.cpp
archive/sidechannel_native/libflush/: Android.mk  Application.mk  CMakeLists.txt  circularlinkedlist.h  config.mk
archive/sidechannel_native/libflush/libflush/: calibrate.c  calibrate.h  hit.c  hit.h  internal.h  libflush.c  libflush.h  timing.c  timing.h  utils.c
archive/sidechannel_native/libflush/libflush/armv7/: memory.h  timing.h
archive/sidechannel_native/libflush/libflush/armv8/: flush.h  memory.h  timing.h
archive/sidechannel_native/libflush/libflush/x86/: timing.h
organicmaps/: CMakeLists.txt  README
organicmaps/android/: build.gradle
organicmaps/android/jni/app/organicmaps/: Framework.cpp  LocationState.cpp
organicmaps/android/src/app/organicmaps/: MwmActivity.java
organicmaps/map/: framework.cpp  gps_track.cpp  routing_manager.cpp  routing_manager.hpp  search_api.cpp  traffic_manager.cpp
organicmaps/routing/: CMakeLists.txt  async_router.cpp  directions_engine.cpp  route.cpp  routing_session.cpp  speed_camera_manager.cpp  turns_generator_utils.cpp  turns_notification_manager.cpp  turns_sound_settings.cpp  turns_tts_text.cpp
organicmaps/sidechannel/: CMakeLists.txt  side_channel.cpp  side_channel.hpp
(+10 files in other folders)
